replace Unsafe reflection with Method.setAccessible()